# audio-report

./: .env.example  .gitignore  README.md  build_demo.py  pyproject.toml
.github/workflows/: pages.yml
analysis/: REPORT.md  analyze.py  belly_voice.py  gen_duration_demo.py  gen_perline.py  make_srt.py  metrics.csv  plots_unified.py  repeat_gen.py  report.tex  report_clone.tex  report_full.tex  report_similarity.tex  similarity.csv  similarity.py  similarity_plots.py  similarity_refline.csv  time_engines.sh  timings.csv  utmos.json  utmos_repeat.json  wer.json
demo/: index.html
demo/srt/: chatterbox.srt  f5.srt  index.srt  kokoro.srt  litellm.srt  perline.srt  styletts2.srt
docs/: gemini_litellm.md
scripts/: harvard_intro.txt  ref_line.txt  see_you.txt  vi_intro.txt  voice_consistency_test.txt  voice_similarity_test.txt
src/athena_tts/: __init__.py  cli.py  engines.py  text.py
tests/: test_cli.py
