[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "athena-tts"
version = "0.1.0"
description = "Voice consistency harness for multiple open-source TTS engines."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
athena-tts = "athena_tts.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

